--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/static/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/custom.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/syntax.css">
 
 {% include header.html %}
 
