--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/custom.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/syntax.css">
 {% include header.html %}
 <div class="container px-2 max-width: 100%">
     <div class="row">
