--- a/_layouts/members.html
+++ b/_layouts/members.html
@@ -1,6 +1,9 @@
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/bootstrap.min.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/custom.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/static/css/syntax.css">
 {% include header.html %}
 <div class="container">
-   <img class="img-fluid" src="/static/img/members/all.jpg" title="Lab photo outside of Genentech hall" alt="Lab photo outside of Genentech hall">
+   <img class="img-fluid" src="{{ site.baseurl }}/static/img/members/all.jpg" title="Lab photo outside of Genentech hall" alt="Lab photo outside of Genentech hall">
    <div class="row">
        <div class="col-sm-9">
            <br>
