--- a/_includes/contact_sidebar.html
+++ b/_includes/contact_sidebar.html
@@ -14,13 +14,13 @@ San Francisco, CA 94158 <br>
 
 <p>
  <h3> Interested in joining the JBD lab? </h3>
- We are always looking for motivated and talented people. <b>Open positions are listed on our <a href="{{ site.url }}/join">Join</a> page.</b><br>
+ We are always looking for motivated and talented people. <b>Open positions are listed on our <a href="{{ site.url }}/{{ site.baseurl }}/join">Join</a> page.</b><br>
 <br>
  We welcome applicants from <b>all</b> backgrounds.<br>
 </p>
 
 <p>
- <h3> Read our <a href="{{ site.url }}/compact/">lab compact and philosophy</a></h3>
+ <h3> Read our <a href="{{ site.url }}/{{ site.baseurl }}/compact/">lab compact and philosophy</a></h3>
 
 </p>
 
