--- a/_includes/contact_sidebar.html
+++ b/_includes/contact_sidebar.html
@@ -20,7 +20,7 @@ San Francisco, CA 94158 <br>
 </p>
 
 <p>
- <h3> Read our <a href="{{ site.url }}/{{ site.baseurl }}/compact/">lab compact and philosophy</a></h3>
+ <h3> Read our <a href="{{ site.url }}{{ site.baseurl }}/philosophy/">lab compact and philosophy</a></h3>
 
 </p>
 
