--- a/_includes/contact_sidebar.html
+++ b/_includes/contact_sidebar.html
@@ -4,7 +4,7 @@ Joe Bondy-Denomy, Ph.D. <br>
 Assistant Professor <br>
 Department of Microbiology &amp; Immunology <br>
 <br>
-email: joseph.bondy-denomy (at) ucsf.edu <br>
+email: joseph.bondy-denomy@ucsf.edu <br>
 <br>
 Genentech Hall Room N372E <br>
 UCSF Mail Code 2200 <br>
